k8s-yml/emptyDir-volume.yml
apiVersion: v1
kind: Pod
metadata:
  name: volume-pod
spec:
  containers:
  - image: busybox
    name: busybox
	command: ["/bin/sh", "-c", "while true; do sleep 3600; done"]
	volumeMounts:
	- mountPath: /tmp/storage
	  name: my-volume
  volumes:
  - name: my-volume
    emptyDir: {}
