k8s-yml/my-args-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-args-pod
  labels:
    app: myapp
spec:
  containers:
    - name: myapp-containers
      image: busybox
      command: ['echo']
      args: ['This is my args pod']
  restsartpolicy: never    
  
  
  args: [/bin/sh, -c, 'i=0; while true; do echo "$i: $(date)"; i=$((i+1)); sleep 1; done']
