k8s-yml/pv-pvc.yml
my-pv.yml

apiVersion: v1
kind: PersistentVolume
metadata:
  name: my-pv
spec:
  storageClassName: local-storage
  capacity:
    storage: 1Gi
  accessModes:
    - ReadWriteOnce
  hostPath:
  path: "/mnt/data"
  
...

my-pvc.yml

apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: my-pvc
spec:
  storageClassName: local-storage
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 512Mi

...

my-pvc-pod.yml

apiVersion: v1
kind: Pod
metadata:
  name: my-pvc-pod
spec:
  containers:
  - image: busybox
    name: busybox
	command: ["/bin/sh", "-c", "while true; do sleep 3600; done"]
	volumeMounts:
	- mountPath: /tmp/storage
	  name: my-storage
  volumes:
  - name: my-storage
    PersistentVolumeClaim:
      claimName: my-pvc
