k8s-yml/role.yml
apiVersion: v1
kind: Pod
metadata:
  name: curlpod
  namespace: web
spec:
  containers:
  - image: tutum/curl
    command: ["sleep", "99999999"]
    name: main
  - image: chadmcrowell/kubectl-proxy
    name: proxy
  restartPolicy: Always
