k8s-yml/mongoDB.yml
vi mongo-secret.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017  # this port number should be macth on targetPort in service
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb
  ports:
    - protocol:TCP
      port: 27017
      targetPort: 27017 # this port number should be macth on containerPort in deployment
...

kubectl apply -f mongodb-deployment.yml


##############################################################################################

vi mongo-configmap.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
        - containerPoer: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    app: mongo-express
  type: LoadBalancer 
  ports:
    - protocol:TCP
      port: 8081
      targetPort: 8081
      nodePort: 30000
...

kubectl apply -f mongo-express.yml
